# petpet

./: .gitignore  README.md  run.sh
.github/workflows/: build.yml
assets/icons/: AppIcon.icns
rust/native-pet/: Cargo.toml
rust/native-pet/src/: main.rs
scripts/: build-mac-app.sh
