[package]
name = "native-pet"
version = "0.1.7"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
pollster = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = { version = "0.35", features = ["rwh_06"] }
tray-icon = "0.24"
wgpu = "0.20"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
